<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="right"
    android:id="@+id/nav_drawer"
    tools:context=".ProfileActivity">
    
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="right"
        android:background="@drawable/background3"
        app:menu="@menu/menu"
        app:itemTextColor="@color/black"
        app:itemHorizontalPadding="60dp"
        android:paddingTop="110dp"
        android:layoutDirection="rtl"
        app:itemTextAppearance="@style/NavigationItemTextStyle">

    </com.google.android.material.navigation.NavigationView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background2">

        <ImageButton
            android:id="@+id/back_icon"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:background="@drawable/backarrow"
            android:onClick="onClickBackBtn"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0.05" />

        <ImageButton
            android:id="@+id/navigation_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/menu_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.03" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="220dp"
            android:src="@drawable/iburger_logo2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.422"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/profile"
            android:textColor="@color/green"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/back_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04"
            app:layout_constraintHorizontal_bias="0"
            />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_shape"
                android:gravity="center_horizontal"
                android:hint="@string/full_name"
                android:inputType="text"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_shape"
                android:gravity="center_horizontal"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_shape"
                android:gravity="center_horizontal"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_shape"
                android:gravity="center_horizontal"
                android:hint="@string/location"
                android:inputType="text"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_shape"
                android:gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_shape"
                android:gravity="center_horizontal"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#00000000"
                android:onClick="onClickSaveBtn"
                android:text="@string/save"
                android:textColor="@color/orange"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>